name:                  gogol-admin-reports
version:               0.5.0
synopsis:              Google Admin Reports SDK.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015-2016 Brendan Hay
category:              Network, Google, Cloud
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md src/.gitkeep

description:
    Fetches reports for the administrators of G Suite customers about the
    usage, collaboration, security, and risk for their users.
    .
    /Warning:/ This is an experimental prototype/preview release which is still
    under exploratory development and not intended for public use, caveat emptor!
    .
    This library is compatible with version @reports_v1@
    of the API.

source-repository head
    type:     git
    location: git://github.com/brendanhay/gogol.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.Google.Reports
        , Network.Google.Reports.Types
        , Network.Google.Resource.Admin.Channels.Stop
        , Network.Google.Resource.Reports.Activities.List
        , Network.Google.Resource.Reports.Activities.Watch
        , Network.Google.Resource.Reports.CustomerUsageReports.Get
        , Network.Google.Resource.Reports.EntityUsageReports.Get
        , Network.Google.Resource.Reports.UserUsageReport.Get

    other-modules:
          Network.Google.Reports.Types.Product
        , Network.Google.Reports.Types.Sum

    build-depends:
          gogol-core == 0.5.0.*
        , base       >= 4.7 && < 5
