name:                  gogol-admin
version:               0.0.1
synopsis:              Google Admin Data Transfer API.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015 Brendan Hay
category:              Network, Google, Cloud
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md

description:
    Pending

source-repository head
    type:     git
    location: git://github.com/brendanhay/gogol.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.Google.DataTransfer
        , Network.Google.DataTransfer.Types
        , Network.Google.Directory
        , Network.Google.Directory.Types
        , Network.Google.EmailMigrationAPIv2
        , Network.Google.EmailMigrationAPIv2.Types
        , Network.Google.Reports
        , Network.Google.Reports.Types

    other-modules:
          Network.Google.DataTransfer.Types.Product
        , Network.Google.DataTransfer.Types.Sum
        , Network.Google.Directory.Types.Product
        , Network.Google.Directory.Types.Sum
        , Network.Google.EmailMigrationAPIv2.Types.Product
        , Network.Google.EmailMigrationAPIv2.Types.Sum
        , Network.Google.Reports.Types.Product
        , Network.Google.Reports.Types.Sum

    build-depends:
          gogol-core == 0.0.1.*
        , base       >= 4.7 && < 5
