name:                  gogol-admin
version:               0.0.1
synopsis:              Google Admin Data Transfer API.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015 Brendan Hay
category:              Network, Google, Cloud
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md

description:
    Admin Data Transfer API lets you transfer user data from one user to
    another.
    The Admin SDK Directory API lets you view and manage enterprise
    resources such as users and groups, administrative notifications,
    security features, and more.
    Email Migration API lets you migrate emails of users to Google backends.
    Allows the administrators of Google Apps customers to fetch reports
    about the usage, collaboration, security and risk for their users.
    .
    /Warning:/ This is an experimental preview release which is still under
    heavy development and not intended for public consumption, caveat emptor!

source-repository head
    type:     git
    location: git://github.com/brendanhay/gogol.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.Google.DataTransfer
        , Network.Google.DataTransfer.Types
        , Network.Google.Directory
        , Network.Google.Directory.Types
        , Network.Google.EmailMigration
        , Network.Google.EmailMigration.Types
        , Network.Google.Reports
        , Network.Google.Reports.Types

    other-modules:
          Network.Google.DataTransfer.Types.Product
        , Network.Google.DataTransfer.Types.Sum
        , Network.Google.Directory.Types.Product
        , Network.Google.Directory.Types.Sum
        , Network.Google.EmailMigration.Types.Product
        , Network.Google.EmailMigration.Types.Sum
        , Network.Google.Reports.Types.Product
        , Network.Google.Reports.Types.Sum

    build-depends:
          gogol-core == 0.0.1.*
        , base       >= 4.7 && < 5
