name:                  gogol-adsense-host
version:               0.0.1
synopsis:              AdSense Host API Client.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015 Brendan Hay
category:              Network, Google, Cloud
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md

description:
    Gives AdSense Hosts access to report generation, ad code generation, and
    publisher management capabilities.
    .
    /Warning:/ This is an experimental prototype/preview release which is still
    under exploratory development and not intended for public use, caveat emptor!

source-repository head
    type:     git
    location: git://github.com/brendanhay/gogol.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.Google.AdSenseHost
        , Network.Google.AdSenseHost.Types
        , Network.Google.Resource.AdSenseHost.Accounts.Adclients.Get
        , Network.Google.Resource.AdSenseHost.Accounts.Adclients.List
        , Network.Google.Resource.AdSenseHost.Accounts.Adunits.Delete
        , Network.Google.Resource.AdSenseHost.Accounts.Adunits.Get
        , Network.Google.Resource.AdSenseHost.Accounts.Adunits.GetAdCode
        , Network.Google.Resource.AdSenseHost.Accounts.Adunits.Insert
        , Network.Google.Resource.AdSenseHost.Accounts.Adunits.List
        , Network.Google.Resource.AdSenseHost.Accounts.Adunits.Patch
        , Network.Google.Resource.AdSenseHost.Accounts.Adunits.Update
        , Network.Google.Resource.AdSenseHost.Accounts.Get
        , Network.Google.Resource.AdSenseHost.Accounts.List
        , Network.Google.Resource.AdSenseHost.Accounts.Reports.Generate
        , Network.Google.Resource.AdSenseHost.Adclients.Get
        , Network.Google.Resource.AdSenseHost.Adclients.List
        , Network.Google.Resource.AdSenseHost.Associationsessions.Start
        , Network.Google.Resource.AdSenseHost.Associationsessions.Verify
        , Network.Google.Resource.AdSenseHost.Customchannels.Delete
        , Network.Google.Resource.AdSenseHost.Customchannels.Get
        , Network.Google.Resource.AdSenseHost.Customchannels.Insert
        , Network.Google.Resource.AdSenseHost.Customchannels.List
        , Network.Google.Resource.AdSenseHost.Customchannels.Patch
        , Network.Google.Resource.AdSenseHost.Customchannels.Update
        , Network.Google.Resource.AdSenseHost.Reports.Generate
        , Network.Google.Resource.AdSenseHost.URLchannels.Delete
        , Network.Google.Resource.AdSenseHost.URLchannels.Insert
        , Network.Google.Resource.AdSenseHost.URLchannels.List

    other-modules:
          Network.Google.AdSenseHost.Types.Product
        , Network.Google.AdSenseHost.Types.Sum

    build-depends:
          gogol-core == 0.0.1.*
        , base       >= 4.7 && < 5
