name:                  gogol-adsense-host
version:               0.5.0
synopsis:              Google AdSense Host SDK.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015-2016 Brendan Hay
category:              Network, Google, Cloud
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md src/.gitkeep

description:
    Generates performance reports, generates ad codes, and provides
    publisher management capabilities for AdSense Hosts.
    .
    /Warning:/ This is an experimental prototype/preview release which is still
    under exploratory development and not intended for public use, caveat emptor!
    .
    This library is compatible with version @v4.1@
    of the API.
    .
    Labels:
    .
    * Limited Availability

source-repository head
    type:     git
    location: git://github.com/brendanhay/gogol.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.Google.AdSenseHost
        , Network.Google.AdSenseHost.Types
        , Network.Google.Resource.AdSenseHost.Accounts.AdClients.Get
        , Network.Google.Resource.AdSenseHost.Accounts.AdClients.List
        , Network.Google.Resource.AdSenseHost.Accounts.AdUnits.Delete
        , Network.Google.Resource.AdSenseHost.Accounts.AdUnits.Get
        , Network.Google.Resource.AdSenseHost.Accounts.AdUnits.GetAdCode
        , Network.Google.Resource.AdSenseHost.Accounts.AdUnits.Insert
        , Network.Google.Resource.AdSenseHost.Accounts.AdUnits.List
        , Network.Google.Resource.AdSenseHost.Accounts.AdUnits.Patch
        , Network.Google.Resource.AdSenseHost.Accounts.AdUnits.Update
        , Network.Google.Resource.AdSenseHost.Accounts.Get
        , Network.Google.Resource.AdSenseHost.Accounts.List
        , Network.Google.Resource.AdSenseHost.Accounts.Reports.Generate
        , Network.Google.Resource.AdSenseHost.AdClients.Get
        , Network.Google.Resource.AdSenseHost.AdClients.List
        , Network.Google.Resource.AdSenseHost.AssociationSessions.Start
        , Network.Google.Resource.AdSenseHost.AssociationSessions.Verify
        , Network.Google.Resource.AdSenseHost.CustomChannels.Delete
        , Network.Google.Resource.AdSenseHost.CustomChannels.Get
        , Network.Google.Resource.AdSenseHost.CustomChannels.Insert
        , Network.Google.Resource.AdSenseHost.CustomChannels.List
        , Network.Google.Resource.AdSenseHost.CustomChannels.Patch
        , Network.Google.Resource.AdSenseHost.CustomChannels.Update
        , Network.Google.Resource.AdSenseHost.Reports.Generate
        , Network.Google.Resource.AdSenseHost.URLChannels.Delete
        , Network.Google.Resource.AdSenseHost.URLChannels.Insert
        , Network.Google.Resource.AdSenseHost.URLChannels.List

    other-modules:
          Network.Google.AdSenseHost.Types.Product
        , Network.Google.AdSenseHost.Types.Sum

    build-depends:
          gogol-core == 0.5.0.*
        , base       >= 4.7 && < 5
