cabal-version:      2.2
name:               gogol-adsense-host
version:            0.5.0
synopsis:           Google AdSense Host SDK.
homepage:           https://github.com/brendanhay/gogol
bug-reports:        https://github.com/brendanhay/gogol/issues
license:            MPL-2.0
license-file:       LICENSE
author:             Brendan Hay
maintainer:         Brendan Hay <brendan.g.hay+gogol@gmail.com>
copyright:          Copyright (c) 2015-2022 Brendan Hay
category:           Google
build-type:         Simple
extra-source-files:
  README.md
  src/.gitkeep

description:
  Generates performance reports, generates ad codes, and provides publisher management capabilities for AdSense Hosts.
  .
  /Warning:/ This is an experimental prototype/preview release which is still
  under exploratory development and not intended for public use, caveat emptor!
  .
  This library is compatible with version @v4.1@
  of the API.
  .
  Labels:
  .
  * Limited Availability

source-repository head
  type:     git
  location: git://github.com/brendanhay/gogol.git
  subdir:   gogol-adsense-host

flag no-field-selectors
  description: If field selectors should be omitted, requires GHC >=9.2
  default:     True

library
  default-language: Haskell2010
  hs-source-dirs:   src gen
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates -funbox-strict-fields

  if (flag(no-field-selectors) && impl(ghc >=9.1))
    default-extensions: NoFieldSelectors

  exposed-modules:
    Network.Google.AdSenseHost
    Network.Google.AdSenseHost.Accounts.Adclients.Get
    Network.Google.AdSenseHost.Accounts.Adclients.List
    Network.Google.AdSenseHost.Accounts.Adunits.Delete
    Network.Google.AdSenseHost.Accounts.Adunits.Get
    Network.Google.AdSenseHost.Accounts.Adunits.GetAdCode
    Network.Google.AdSenseHost.Accounts.Adunits.Insert
    Network.Google.AdSenseHost.Accounts.Adunits.List
    Network.Google.AdSenseHost.Accounts.Adunits.Patch
    Network.Google.AdSenseHost.Accounts.Adunits.Update
    Network.Google.AdSenseHost.Accounts.Get
    Network.Google.AdSenseHost.Accounts.List
    Network.Google.AdSenseHost.Accounts.Reports.Generate
    Network.Google.AdSenseHost.Adclients.Get
    Network.Google.AdSenseHost.Adclients.List
    Network.Google.AdSenseHost.Associationsessions.Start
    Network.Google.AdSenseHost.Associationsessions.Verify
    Network.Google.AdSenseHost.Customchannels.Delete
    Network.Google.AdSenseHost.Customchannels.Get
    Network.Google.AdSenseHost.Customchannels.Insert
    Network.Google.AdSenseHost.Customchannels.List
    Network.Google.AdSenseHost.Customchannels.Patch
    Network.Google.AdSenseHost.Customchannels.Update
    Network.Google.AdSenseHost.Reports.Generate
    Network.Google.AdSenseHost.Types
    Network.Google.AdSenseHost.Urlchannels.Delete
    Network.Google.AdSenseHost.Urlchannels.Insert
    Network.Google.AdSenseHost.Urlchannels.List

  other-modules:
    Network.Google.AdSenseHost.Internal.Product
    Network.Google.AdSenseHost.Internal.Sum

  build-depends:
    , base        >=4.12  && <5
    , gogol-core  >=0.5.0 && <0.5.1
