name:                  gogol-adsense
version:               0.5.0
synopsis:              Google AdSense Management SDK.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015-2016 Brendan Hay
category:              Network, Google, Cloud
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md src/.gitkeep

description:
    Accesses AdSense publishers\' inventory and generates performance
    reports.
    .
    /Warning:/ This is an experimental prototype/preview release which is still
    under exploratory development and not intended for public use, caveat emptor!
    .
    This library is compatible with version @v1.4@
    of the API.

source-repository head
    type:     git
    location: git://github.com/brendanhay/gogol.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.Google.AdSense
        , Network.Google.AdSense.Types
        , Network.Google.Resource.AdSense.Accounts.AdClients.GetAdCode
        , Network.Google.Resource.AdSense.Accounts.AdClients.List
        , Network.Google.Resource.AdSense.Accounts.AdUnits.CustomChannels.List
        , Network.Google.Resource.AdSense.Accounts.AdUnits.Get
        , Network.Google.Resource.AdSense.Accounts.AdUnits.GetAdCode
        , Network.Google.Resource.AdSense.Accounts.AdUnits.List
        , Network.Google.Resource.AdSense.Accounts.Alerts.Delete
        , Network.Google.Resource.AdSense.Accounts.Alerts.List
        , Network.Google.Resource.AdSense.Accounts.CustomChannels.AdUnits.List
        , Network.Google.Resource.AdSense.Accounts.CustomChannels.Get
        , Network.Google.Resource.AdSense.Accounts.CustomChannels.List
        , Network.Google.Resource.AdSense.Accounts.Get
        , Network.Google.Resource.AdSense.Accounts.List
        , Network.Google.Resource.AdSense.Accounts.Payments.List
        , Network.Google.Resource.AdSense.Accounts.Reports.Generate
        , Network.Google.Resource.AdSense.Accounts.Reports.Saved.Generate
        , Network.Google.Resource.AdSense.Accounts.Reports.Saved.List
        , Network.Google.Resource.AdSense.Accounts.Savedadstyles.Get
        , Network.Google.Resource.AdSense.Accounts.Savedadstyles.List
        , Network.Google.Resource.AdSense.Accounts.URLChannels.List
        , Network.Google.Resource.AdSense.AdClients.List
        , Network.Google.Resource.AdSense.AdUnits.CustomChannels.List
        , Network.Google.Resource.AdSense.AdUnits.Get
        , Network.Google.Resource.AdSense.AdUnits.GetAdCode
        , Network.Google.Resource.AdSense.AdUnits.List
        , Network.Google.Resource.AdSense.Alerts.Delete
        , Network.Google.Resource.AdSense.Alerts.List
        , Network.Google.Resource.AdSense.CustomChannels.AdUnits.List
        , Network.Google.Resource.AdSense.CustomChannels.Get
        , Network.Google.Resource.AdSense.CustomChannels.List
        , Network.Google.Resource.AdSense.Metadata.Dimensions.List
        , Network.Google.Resource.AdSense.Metadata.Metrics.List
        , Network.Google.Resource.AdSense.Payments.List
        , Network.Google.Resource.AdSense.Reports.Generate
        , Network.Google.Resource.AdSense.Reports.Saved.Generate
        , Network.Google.Resource.AdSense.Reports.Saved.List
        , Network.Google.Resource.AdSense.Savedadstyles.Get
        , Network.Google.Resource.AdSense.Savedadstyles.List
        , Network.Google.Resource.AdSense.URLChannels.List

    other-modules:
          Network.Google.AdSense.Types.Product
        , Network.Google.AdSense.Types.Sum

    build-depends:
          gogol-core == 0.5.0.*
        , base       >= 4.7 && < 5
