name:                  gogol-adsense
version:               0.5.0
synopsis:              Google AdSense Management SDK.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015-2016 Brendan Hay
category:              Network, Google, Cloud
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md src/.gitkeep

description:
    The AdSense Management API allows publishers to access their inventory
    and run earnings and performance reports.
    .
    /Warning:/ This is an experimental prototype/preview release which is still
    under exploratory development and not intended for public use, caveat emptor!
    .
    This library is compatible with version @v2@
    of the API.

source-repository head
    type:     git
    location: git://github.com/brendanhay/gogol.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.Google.AdSense
        , Network.Google.AdSense.Types
        , Network.Google.Resource.AdSense.Accounts.AdClients.AdUnits.Get
        , Network.Google.Resource.AdSense.Accounts.AdClients.AdUnits.GetAdcode
        , Network.Google.Resource.AdSense.Accounts.AdClients.AdUnits.List
        , Network.Google.Resource.AdSense.Accounts.AdClients.AdUnits.ListLinkedCustomChannels
        , Network.Google.Resource.AdSense.Accounts.AdClients.CustomChannels.Get
        , Network.Google.Resource.AdSense.Accounts.AdClients.CustomChannels.List
        , Network.Google.Resource.AdSense.Accounts.AdClients.CustomChannels.ListLinkedAdUnits
        , Network.Google.Resource.AdSense.Accounts.AdClients.GetAdcode
        , Network.Google.Resource.AdSense.Accounts.AdClients.List
        , Network.Google.Resource.AdSense.Accounts.AdClients.URLChannels.List
        , Network.Google.Resource.AdSense.Accounts.Alerts.List
        , Network.Google.Resource.AdSense.Accounts.Get
        , Network.Google.Resource.AdSense.Accounts.List
        , Network.Google.Resource.AdSense.Accounts.ListChildAccounts
        , Network.Google.Resource.AdSense.Accounts.Payments.List
        , Network.Google.Resource.AdSense.Accounts.Reports.Generate
        , Network.Google.Resource.AdSense.Accounts.Reports.GenerateCSV
        , Network.Google.Resource.AdSense.Accounts.Reports.Saved.Generate
        , Network.Google.Resource.AdSense.Accounts.Reports.Saved.GenerateCSV
        , Network.Google.Resource.AdSense.Accounts.Reports.Saved.List
        , Network.Google.Resource.AdSense.Accounts.Sites.Get
        , Network.Google.Resource.AdSense.Accounts.Sites.List

    other-modules:
          Network.Google.AdSense.Types.Product
        , Network.Google.AdSense.Types.Sum

    build-depends:
          gogol-core == 0.5.0.*
        , base       >= 4.7 && < 5
