cabal-version:      2.2
name:               gogol-adsense
version:            0.5.0
synopsis:           Google AdSense Management SDK.
homepage:           https://github.com/brendanhay/gogol
bug-reports:        https://github.com/brendanhay/gogol/issues
license:            MPL-2.0
license-file:       LICENSE
author:             Brendan Hay
maintainer:         Brendan Hay <brendan.g.hay+gogol@gmail.com>
copyright:          Copyright (c) 2015-2022 Brendan Hay
category:           Google
build-type:         Simple
extra-source-files:
  README.md
  src/.gitkeep

description:
  The AdSense Management API allows publishers to access their inventory and run earnings and performance reports.
  .
  /Warning:/ This is an experimental prototype/preview release which is still
  under exploratory development and not intended for public use, caveat emptor!
  .
  This library is compatible with version @v2@
  of the API.

source-repository head
  type:     git
  location: git://github.com/brendanhay/gogol.git
  subdir:   gogol-adsense

flag no-field-selectors
  description: If field selectors should be omitted, requires GHC >=9.2
  default:     True

library
  default-language: Haskell2010
  hs-source-dirs:   src gen
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates -funbox-strict-fields

  if (flag(no-field-selectors) && impl(ghc >=9.1))
    default-extensions: NoFieldSelectors

  exposed-modules:
    Network.Google.AdSense
    Network.Google.AdSense.Accounts.Adclients.Adunits.Get
    Network.Google.AdSense.Accounts.Adclients.Adunits.GetAdcode
    Network.Google.AdSense.Accounts.Adclients.Adunits.List
    Network.Google.AdSense.Accounts.Adclients.Adunits.ListLinkedCustomChannels
    Network.Google.AdSense.Accounts.Adclients.Customchannels.Get
    Network.Google.AdSense.Accounts.Adclients.Customchannels.List
    Network.Google.AdSense.Accounts.Adclients.Customchannels.ListLinkedAdUnits
    Network.Google.AdSense.Accounts.Adclients.GetAdcode
    Network.Google.AdSense.Accounts.Adclients.List
    Network.Google.AdSense.Accounts.Adclients.Urlchannels.List
    Network.Google.AdSense.Accounts.Alerts.List
    Network.Google.AdSense.Accounts.Get
    Network.Google.AdSense.Accounts.List
    Network.Google.AdSense.Accounts.ListChildAccounts
    Network.Google.AdSense.Accounts.Payments.List
    Network.Google.AdSense.Accounts.Reports.Generate
    Network.Google.AdSense.Accounts.Reports.GenerateCsv
    Network.Google.AdSense.Accounts.Reports.Saved.Generate
    Network.Google.AdSense.Accounts.Reports.Saved.GenerateCsv
    Network.Google.AdSense.Accounts.Reports.Saved.List
    Network.Google.AdSense.Accounts.Sites.Get
    Network.Google.AdSense.Accounts.Sites.List
    Network.Google.AdSense.Types

  other-modules:
    Network.Google.AdSense.Internal.Product
    Network.Google.AdSense.Internal.Sum

  build-depends:
    , base        >=4.12  && <5
    , gogol-core  >=0.5.0 && <0.5.1
