name:                  gogol-affiliates
version:               0.0.1
synopsis:              Google Affiliate Network API Client.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015 Brendan Hay
category:              Network, Google, Cloud
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md

description:
    Lets you have programmatic access to your Google Affiliate Network data.
    .
    /Warning:/ This is an experimental prototype/preview release which is still
    under exploratory development and not intended for public use, caveat emptor!

source-repository head
    type:     git
    location: git://github.com/brendanhay/gogol.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.Google.API.Gan.Advertisers.Get
        , Network.Google.API.Gan.Advertisers.List
        , Network.Google.API.Gan.CcOffers.List
        , Network.Google.API.Gan.Events.List
        , Network.Google.API.Gan.Links.Get
        , Network.Google.API.Gan.Links.Insert
        , Network.Google.API.Gan.Links.List
        , Network.Google.API.Gan.Publishers.Get
        , Network.Google.API.Gan.Publishers.List
        , Network.Google.API.Gan.Reports.Get
        , Network.Google.Affiliates
        , Network.Google.Affiliates.Types

    other-modules:
          Network.Google.Affiliates.Types.Product
        , Network.Google.Affiliates.Types.Sum

    build-depends:
          gogol-core == 0.0.1.*
        , base       >= 4.7 && < 5
