name:                  gogol-alertcenter
version:               0.5.0
synopsis:              Google G Suite Alert Center SDK.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015-2016 Brendan Hay
category:              Network, Google, Cloud
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md src/.gitkeep

description:
    Manages alerts on issues affecting your domain.
    .
    /Warning:/ This is an experimental prototype/preview release which is still
    under exploratory development and not intended for public use, caveat emptor!
    .
    This library is compatible with version @v1beta1@
    of the API.

source-repository head
    type:     git
    location: git://github.com/brendanhay/gogol.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.Google.AlertCenter
        , Network.Google.AlertCenter.Types
        , Network.Google.Resource.AlertCenter.Alerts.Delete
        , Network.Google.Resource.AlertCenter.Alerts.Feedback.Create
        , Network.Google.Resource.AlertCenter.Alerts.Feedback.List
        , Network.Google.Resource.AlertCenter.Alerts.Get
        , Network.Google.Resource.AlertCenter.Alerts.List
        , Network.Google.Resource.AlertCenter.Alerts.Undelete
        , Network.Google.Resource.AlertCenter.GetSettings
        , Network.Google.Resource.AlertCenter.UpdateSettings

    other-modules:
          Network.Google.AlertCenter.Types.Product
        , Network.Google.AlertCenter.Types.Sum

    build-depends:
          gogol-core == 0.5.0.*
        , base       >= 4.7 && < 5
